# MonopolyDeal

./: CMakeLists.txt  README.md
include/: Game.h  IControllerIO.h  IGameInput.h  JsonConstants.h  Monopoly_pch.h
resources/: cardList.csv  settings.json
src/: AIController.cpp  AIController.h  CSVRow.cpp  CSVRow.h  Card.cpp  Card.h  CardSet.cpp  CardSet.h  Game.cpp  JSONGame.cpp  JSONGame.h  MonopolyDeal.cpp  Player.cpp  Player.h  PlayerController.h
src/controllers/: AIController.cpp  AIController.h  GreedyAIController.cpp  GreedyAIController.h  NeuronController.cpp  NeuronController.h  PlayerController.h
tests/: Test.cpp
tests/saves/: FivePlayers.json  newsave2.json
